--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "GUI_Showcase/gui"]
 	path = GUI_Showcase/gui
-	url = git@github.com:NHDaly/SDL-GUI-Library.git
+	url = https://github.com/NHDaly/GUI_Example_App.git
+
