--- a/GUI_Showcase/Makefile
+++ b/GUI_Showcase/Makefile
@@ -16,7 +16,7 @@ PREXISTING_FRAMEWORKS =  $(wildcard /Library/Frameworks/SDL*.framework)
 
 OBJS = main.o fake_lib1.o
 
-default: gui_files settup $(PROG)
+default: setup gui_files $(PROG)
 	@echo "Done!"
 	@echo $(PROG)
 
@@ -24,10 +24,10 @@ gui_files:
 	@echo "Making GUI files."
 	cd gui;	make
 
-settup: settup_resources settup_frameworks
+setup: setup_resources setup_frameworks
 	
 
-settup_resources: 
+setup_resources: 
 	@echo "\nCopying Resource files."
 	mkdir -p Resources
 	cp -R gui/GUIImages Resources
@@ -37,7 +37,7 @@ ifneq ($(RESOURCES),)
 endif
 
 
-settup_frameworks: $(FRAMEWORK_FILES)
+setup_frameworks: $(FRAMEWORK_FILES)
 	@echo "\nChecking Frameworks.."
 ifneq ($(PREXISTING_FRAMEWORKS),)
 	@echo "Frameworks are already installed"
